@@ -1,3 +1,8 @@
+2011-06-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/49276
+	* g++.dg/cpp0x/lambda/lambda-mangle2.C: New test.
+
 2011-06-02  Steven G. Kargl  <kargl@gcc.gnu.org>
 
 	PR fortran/49265
